# IDKit

./: .gitignore  4_COLUMN_GAP_ANALYSIS.md  5_COLUMN_GAP_ANALYSIS.md  GAP_ANALYSIS_REPORT.md  LAUNCH_HARDENING_COMPLETE.md  Makefile  README.md  ROAD_HOME_IMPLEMENTATION_PLAN.md  ROAD_HOME_IMPLEMENTATION_PLAN_V2.md  docker-compose.gpu.yml  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.yml  start_preview.sh
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  idkit_preview.db  import_audit.txt  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_gdpr_tables.py  003_enterprise_tables.py  20260528_2144_dc6e13b4134d_complete_baseline_schema.py
backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
backend/app/adapters/: __init__.py
backend/app/agents/: __init__.py  action_log.py  analytics_agent.py  base.py  content_agent.py  discovery_agent.py  engagement_agent.py  guardrails.py  moderation_agent.py  orchestrator.py  publishing_agent.py  revenue_agent.py
backend/app/ai/: __init__.py  orchestrator.py
backend/app/api/: dependencies.py
backend/app/core/: stripe_connect_config.py
backend/app/gpu/: __init__.py  dispatcher.py  interfaces.py
backend/app/integrations/: elevenlabs_client.py  heygen_client.py
backend/app/middleware/: __init__.py  api_versioning.py  metrics.py  performance.py  rate_limit.py  security.py
backend/app/ml/: __init__.py  inference.py  model_registry.py  pipeline.py
backend/app/models/: __init__.py  agent.py  agent_memory.py  ai_twin.py  audit.py  base.py  collaboration.py  compliance.py  content.py  contract.py  database.py  enterprise.py  feed.py  intake.py  listening.py  notification.py  payment.py  payout.py  performance.py  podcast.py  report.py  revenue.py  revenue_sharing.py  roi.py  scenario.py  schedule.py  social.py  sponsorship.py  tax.py  twin.py  user.py
backend/app/plugins/: __init__.py  base.py  exceptions.py  hooks.py  loader.py  manager.py  plugin_system.py  registry.py
backend/app/providers/: __init__.py
backend/app/schemas/: audit.py  blockers.py  brand_deals.py  explainability.py  intake.py  payout.py  revenue.py  roi.py  (+3 more)
backend/scripts/: audit_imports.py  generate_sdk.py  seed_demo.py
backend/tests/: __init__.py  conftest.py
(+1124 files in other folders)
